# mico

./: .gitignore  Dockerfile  pyproject.toml  ruff.toml
mico/: __main__.py  agent.py  agent_config.py  agents.py  bus.py  channels.py  cli.py  compact.py  config.py  crons.py  logging.py  memory_store.py  messages.py  paths.py  prompts.py  runtime.py  scheduler.py  storage.py  tools.py  utils.py  web.py
mico/templates/: agent_detail.html  agents.html  base.html  config.html
tests/: test_agent_config.py  test_bus.py  test_config_db.py  test_memory_store.py  test_message_schema.py  test_runtime_attached_folders.py  test_telegram_format.py  test_tools_config.py  test_web_agent_config.py  test_web_attached_folders.py  test_web_chat_bus.py  test_web_config.py
