[project]
name = "onca"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.5.2",
    "aiosqlite>=0.20.0",
    "croniter>=3.0.0",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.6",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
]
